--- a/app/static/css/modal_styles.css
+++ b/app/static/css/modal_styles.css
@@ -40,3 +40,14 @@
         color: red;
         font-weight: bold;
     }
+
+    #route-info {
+    background-color: #f8f9fa;
+    padding: 10px;
+    border-radius: 4px;
+    margin-bottom: 15px;
+    }
+
+    #route-info p {
+        margin: 5px 0;
+    }
