Админка со списком организаций Финал

--- a/app/templates/main/doctor_index.html
+++ b/app/templates/main/doctor_index.html
@@ -14,8 +14,8 @@
     <div class="left-group">
         <div class="hospital-name" id="hospital-name">Загрузка...</div>
         <div class="navigation">
-            <button onclick="location.href='/donor/list'">👩‍⚕️ Доктора</button>
-            <button onclick="location.href='/reports'">🏥 Организации</button>
+            <button onclick="location.href='/doctor/list'">👩‍⚕️ Доктора</button>
+            <button onclick="location.href='/medical_institution/list'">🏥 Организации</button>
         </div>
     </div>
 
